--- a/practice_1/part_4.ipynb
+++ b/practice_1/part_4.ipynb
@@ -24,10 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2b0fc8ff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm going to inject something here.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"I'm going to inject %s here.\" %'something')"
    ]
@@ -42,10 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0c9aeb96",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm going to inject some text here, and more text here.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"I'm going to inject %s text here, and %s text here.\" %('some','more'))"
    ]
@@ -60,10 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fe0a4d47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm going to inject some text here, and more text here.\n"
+     ]
+    }
+   ],
    "source": [
     "x, y = 'some', 'more'\n",
     "print(\"I'm going to inject %s text here, and %s text here.\"%(x,y))"
@@ -80,10 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d673fea9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "He said his name was Fred.\n",
+      "He said his name was 'Fred'.\n"
+     ]
+    }
+   ],
    "source": [
     "print('He said his name was %s.' %'Fred')\n",
     "print('He said his name was %r.' %'Fred')"
@@ -99,10 +132,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5394aa57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I once caught a fish this \tbig\n",
+      "I once caught a fish 'this \\tbig'\n"
+     ]
+    }
+   ],
    "source": [
     "print('I once caught a fish %s' %'this \\tbig')\n",
     "print('I once caught a fish %r' %'this \\tbig')"
@@ -118,10 +160,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f5130eaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I wrote 3.75 programs today.\n",
+      "I wrote 3 programs today.\n"
+     ]
+    }
+   ],
    "source": [
     "print('I wrote %s programs today.' %3.75)\n",
     "print(\"I wrote %d programs today.\" %3.75)"
@@ -138,50 +189,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "97f64527",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Floating point numbers: 13.14\n"
+     ]
+    }
+   ],
    "source": [
     "print('Floating point numbers: %5.2f' %(13.144))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "23d73f37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Floating point numbers: 13\n"
+     ]
+    }
+   ],
    "source": [
     "print('Floating point numbers: %1.0f' %(13.1444))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6306ab67",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Floating point numbers: 13.14400\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Floating point numbers: %1.5f\" %(13.144))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f999a221",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Floating point numbers:      13.14\n"
+     ]
+    }
+   ],
    "source": [
     "print('Floating point numbers: %10.2f' %(13.144))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "33f99b71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Floating point numbers:                     13.14\n"
+     ]
+    }
+   ],
    "source": [
     "print('Floating point numbers: %25.2f' %(13.144))"
    ]
@@ -207,10 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "aa082503",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a string with an insert\n"
+     ]
+    }
+   ],
    "source": [
     "print('This is a string with an {}'.format('insert'))"
    ]
@@ -233,10 +332,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e6ccb5f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a string with an fox\n"
+     ]
+    }
+   ],
    "source": [
     "print('This is a string with an {}'.format('fox','brown','quick'))"
    ]
@@ -251,10 +358,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "8290814a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First object: 1, Second Object: Two, Third Object: 12.3\n"
+     ]
+    }
+   ],
    "source": [
     "print('First object: {a}, Second Object: {b}, Third Object: {c}'.format(a=1,b='Two',c=12.3))"
    ]
@@ -269,10 +384,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2dcf4ed7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A penny saved is a penny earned.\n",
+      "A penny saved is a penny earned.\n"
+     ]
+    }
+   ],
    "source": [
     "print('A %s saved is a %s earned.' %('penny','penny'))\n",
     "# vs\n",
@@ -290,10 +414,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f2f05ad6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fruit    | Quantity \n",
+      "Apples   |       3.0\n",
+      "Oranges  |        10\n"
+     ]
+    }
+   ],
    "source": [
     "print('{0:8} | {1:9}'.format('Fruit', 'Quantity'))\n",
     "print('{0:8} | {1:9}'.format('Apples', 3.))\n",
@@ -310,10 +444,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "6288bc24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Left     |  Center  |    Right\n",
+      "11       |    22    |       33\n"
+     ]
+    }
+   ],
    "source": [
     "print('{0:<8} | {1:^8} | {2:>8}'.format('Left', 'Center', 'Right'))\n",
     "print('{0:<8} | {1:^8} | {2:>8}'.format(11,22,33))"
@@ -329,10 +472,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "0ee44831",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Left==== | -Center-\n",
+      "11====== | ---22--- | ......33\n"
+     ]
+    }
+   ],
    "source": [
     "print('{0:=<8} | {1:-^8}'.format('Left','Center','Right'))\n",
     "print('{0:=<8} | {1:-^8} | {2:.>8}'.format(11,22,33))"
@@ -348,10 +500,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "f5665f1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is my ten-character, two-decimal number:     13.58\n",
+      "This is my ten-charcter, two-decimal number:     13.58\n"
+     ]
+    }
+   ],
    "source": [
     "print('This is my ten-character, two-decimal number:%10.2f' %13.579)\n",
     "print('This is my ten-charcter, two-decimal number:{0:10.2f}'.format(13.579))"
@@ -372,10 +533,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e289d828",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "He said his name is 'Fred'\n"
+     ]
+    }
+   ],
    "source": [
     "name = 'Fred'\n",
     "\n",
@@ -393,10 +562,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "5d37fb2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My 10 character, four decimal number is:   23.4568\n",
+      "My 10 character, four decimal number  is:   23.4568\n"
+     ]
+    }
+   ],
    "source": [
     "num = 23.45678\n",
     "print(\"My 10 character, four decimal number is:{0:10.4f}\".format(num))\n",
@@ -413,10 +591,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "d255db27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My 10 character, four decimal number is:   23.4500\n",
+      "My 10 character, four decimal number is:   23.4500\n"
+     ]
+    }
+   ],
    "source": [
     "num = 23.45\n",
     "print(\"My 10 character, four decimal number is:{0:10.4f}\".format(num))\n",
@@ -433,8 +620,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "testenv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
